[chore]: submodule 관련 설정 추가

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "configs"]
 	path = configs
 	url = https://github.com/team-offonoff/iOS-Config.git
+branch = main
+[submodule "configs/iOS-Config"]
+	path = configs/iOS-Config
+	url = https://github.com/team-offonoff/iOS-Config.git
